[gd_scene load_steps=22 format=3 uid="uid://ned827cp7ode"]

[ext_resource type="PackedScene" uid="uid://cvx863djastva" path="res://entities/enemy.tscn" id="1_1fo65"]
[ext_resource type="Script" path="res://entities/henchman/henchman.gd" id="2_6idk5"]
[ext_resource type="Texture2D" uid="uid://c8xtncg0p3l8e" path="res://assets/sprites/henchman_spritesheet.png" id="2_hn5or"]
[ext_resource type="PackedScene" uid="uid://btk5ekt1aaicl" path="res://entities/hurtbox.tscn" id="3_3uxmc"]
[ext_resource type="AudioStream" uid="uid://cwx0dt8sp4hd1" path="res://assets/sounds/hit.wav" id="3_lb654"]
[ext_resource type="Script" path="res://entities/henchman/henchman_idle.gd" id="5_ljuid"]
[ext_resource type="Script" path="res://entities/henchman/henchman_chase.gd" id="6_pwvp5"]
[ext_resource type="Script" path="res://entities/henchman/henchman_prepare_attack.gd" id="7_ggsph"]
[ext_resource type="Script" path="res://entities/henchman/henchman_attack.gd" id="8_wu1wg"]
[ext_resource type="Script" path="res://entities/henchman/henchman_die.gd" id="9_upekp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjemo"]
size = Vector2(145, 213)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tr5jn"]
radius = 80.0
height = 320.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rlfra"]
radius = 100.0
height = 320.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgi8v"]
size = Vector2(1600, 400)

[sub_resource type="Animation" id="Animation_qi3vh"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/SwordHurtbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Hurtbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dwwpe"]
resource_name = "attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [33, 38]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/SwordHurtbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ivq8w"]
resource_name = "die"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.65),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [56, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Hurtbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/SwordHurtbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_kg2jc"]
resource_name = "idle"
length = 0.55
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 10]
}

[sub_resource type="Animation" id="Animation_eq0ks"]
resource_name = "prepare_attack"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [28, 32]
}

[sub_resource type="Animation" id="Animation_tfdew"]
resource_name = "walk"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [14, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3wn73"]
_data = {
"RESET": SubResource("Animation_qi3vh"),
"attack": SubResource("Animation_dwwpe"),
"die": SubResource("Animation_ivq8w"),
"idle": SubResource("Animation_kg2jc"),
"prepare_attack": SubResource("Animation_eq0ks"),
"walk": SubResource("Animation_tfdew")
}

[node name="Henchman" instance=ExtResource("1_1fo65")]
scale = Vector2(-1, 1)
script = ExtResource("2_6idk5")
speed = 500.0
max_health = 3

[node name="Sprite2D" parent="Pivot" index="0"]
texture = ExtResource("2_hn5or")
hframes = 14
vframes = 5

[node name="SwordHurtbox" parent="Pivot" index="1" instance=ExtResource("3_3uxmc")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/SwordHurtbox" index="0"]
position = Vector2(-160, 100)
shape = SubResource("RectangleShape2D_fjemo")

[node name="CollisionShape2D" parent="Pivot/Hurtbox" index="0"]
position = Vector2(30, 60)
shape = SubResource("CapsuleShape2D_tr5jn")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(20, 60)
shape = SubResource("CapsuleShape2D_rlfra")

[node name="DetectionZone" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone" index="0"]
position = Vector2(5, 27.5)
shape = SubResource("RectangleShape2D_vgi8v")
debug_color = Color(0.701961, 0.254902, 0.270588, 0.419608)

[node name="Hit" parent="." index="3"]
stream = ExtResource("3_lb654")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource("5_ljuid")

[node name="Chase" type="Node" parent="StateMachine" index="1"]
script = ExtResource("6_pwvp5")

[node name="PrepareAttack" type="Node" parent="StateMachine" index="2"]
script = ExtResource("7_ggsph")

[node name="Attack" type="Node" parent="StateMachine" index="3"]
script = ExtResource("8_wu1wg")

[node name="Die" type="Node" parent="StateMachine" index="4"]
script = ExtResource("9_upekp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_3wn73")
}

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
